--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ inputs:
   calver:
     description: "Current CalVer"
     required: true
-  count-calver:
+  calver-count:
     description: "Total number of existing CalVer's"
     required: true
   latest-semver:
@@ -30,9 +30,16 @@ runs:
         echo "$(echo ${{ inputs.latest-semver }} | cut -d. -f3)" >> $GITHUB_ENV
         echo "EOF" >> $GITHUB_ENV
       shell: bash
+    - name: Decrement CalVer count
+      id: decrement-calver-count
+      run: |
+        echo "count-calver<<EOF" >> $GITHUB_ENV
+        echo "$(expr ${{ inputs.count-calver }} - 1)" >> $GITHUB_ENV
+        echo "EOF" >> $GITHUB_ENV
+      shell: bash
     - name: Output SemVer release values
       id: format-results
       run: |
-        echo "::set-output name=semver::1.${{ inputs.count-calver }}.$(if [[ ${{ inputs.count-calver }} -eq ${{ env.minor }} ]]; then echo $(expr ${{ env.patch }} + 1); else echo 0; fi)"
-        echo "::set-output name=notes::$(if [[ ${{ inputs.count-calver }} -eq ${{ env.minor }} ]]; then echo Made minor changes for ${{ inputs.calver }}; else echo Made major changes for ${{ inputs.calver }}; fi)"
+        echo "::set-output name=semver::1.${{ env.count-calver }}.$(if [[ ${{ env.count-calver }} -eq ${{ env.minor }} ]]; then echo $(expr ${{ env.patch }} + 1); else echo 0; fi)"
+        echo "::set-output name=notes::$(if [[ ${{ env.count-calver }} -eq ${{ env.minor }} ]]; then echo Made minor changes for ${{ inputs.calver }}; else echo Made major changes for ${{ inputs.calver }}; fi)"
       shell: bash
