--- a/action.yml
+++ b/action.yml
@@ -33,13 +33,13 @@ runs:
     - name: Decrement CalVer count
       id: decrement-calver-count
       run: |
-        echo "count-calver<<EOF" >> $GITHUB_ENV
-        echo "$(expr ${{ inputs.count-calver }} - 1)" >> $GITHUB_ENV
+        echo "calver-count<<EOF" >> $GITHUB_ENV
+        echo "$(expr ${{ inputs.calver-count }} - 1)" >> $GITHUB_ENV
         echo "EOF" >> $GITHUB_ENV
       shell: bash
     - name: Output SemVer release values
       id: format-results
       run: |
-        echo "::set-output name=semver::1.${{ env.count-calver }}.$(if [[ ${{ env.count-calver }} -eq ${{ env.minor }} ]]; then echo $(expr ${{ env.patch }} + 1); else echo 0; fi)"
-        echo "::set-output name=notes::$(if [[ ${{ env.count-calver }} -eq ${{ env.minor }} ]]; then echo Made minor changes for ${{ inputs.calver }}; else echo Made major changes for ${{ inputs.calver }}; fi)"
+        echo "::set-output name=semver::1.${{ env.calver-count }}.$(if [[ ${{ env.calver-count }} -eq ${{ env.minor }} ]]; then echo $(expr ${{ env.patch }} + 1); else echo 0; fi)"
+        echo "::set-output name=notes::$(if [[ ${{ env.calver-count }} -eq ${{ env.minor }} ]]; then echo Made minor changes for ${{ inputs.calver }}; else echo Made major changes for ${{ inputs.calver }}; fi)"
       shell: bash
