--- a/action.yml
+++ b/action.yml
@@ -24,10 +24,10 @@ runs:
       id: parse-latest-release
       run: |
         echo "minor<<EOF" >> $GITHUB_ENV
-        echo "$(echo ${{ inputs.latest-semver }} | cut -d. -f2)" >> $GITHUB_ENV
+        echo "$(if [[ $(echo ${{ inputs.latest-semver }} | cut -d. -f2) ]]; then echo $(echo ${{ inputs.latest-semver }} | cut -d. -f2); else echo 0; fi)" >> $GITHUB_ENV        
         echo "EOF" >> $GITHUB_ENV
         echo "patch<<EOF" >> $GITHUB_ENV
-        echo "$(echo ${{ inputs.latest-semver }} | cut -d. -f3)" >> $GITHUB_ENV
+        echo "$(if [[ $(echo ${{ inputs.latest-semver }} | cut -d. -f3) ]]; then echo $(echo ${{ inputs.latest-semver }} | cut -d. -f3); else echo 0; fi)" >> $GITHUB_ENV        
         echo "EOF" >> $GITHUB_ENV
       shell: bash
     - name: Decrement CalVer count
