--- a/action.yml
+++ b/action.yml
@@ -34,7 +34,7 @@ runs:
       id: decrement-calver-count
       run: |
         echo "calver-count<<EOF" >> $GITHUB_ENV
-        echo "$(expr ${{ inputs.calver-count }} - 1)" >> $GITHUB_ENV
+        echo "$(if [[ $(expr $count - 1) -lt 0 ]]; then echo 0; else echo $(expr $count - 1); fi)" >> $GITHUB_ENV
         echo "EOF" >> $GITHUB_ENV
       shell: bash
     - name: Output SemVer release values
