--- a/action.yml
+++ b/action.yml
@@ -24,7 +24,7 @@ runs:
       id: parse-latest-release
       run: |
         echo "minor<<EOF" >> $GITHUB_ENV
-        echo "$(if [[ $(echo ${{ inputs.latest-semver }} | cut -d. -f2) ]]; then echo $(echo ${{ inputs.latest-semver }} | cut -d. -f2); fi)" >> $GITHUB_ENV        
+        echo "$(if [[ $(echo ${{ inputs.latest-semver }} | cut -d. -f2) ]]; then echo $(echo ${{ inputs.latest-semver }} | cut -d. -f2); else echo -1; fi)" >> $GITHUB_ENV        
         echo "EOF" >> $GITHUB_ENV
         echo "patch<<EOF" >> $GITHUB_ENV
         echo "$(if [[ $(echo ${{ inputs.latest-semver }} | cut -d. -f3) ]]; then echo $(echo ${{ inputs.latest-semver }} | cut -d. -f3); else echo 0; fi)" >> $GITHUB_ENV        
@@ -33,16 +33,13 @@ runs:
     - name: Normalize values
       id: normalize-values
       run: |
-        echo "calver-count<<EOF" >> $GITHUB_ENV
+        echo "ccount<<EOF" >> $GITHUB_ENV
         echo "$(expr ${{ inputs.calver-count }} - 1)" >> $GITHUB_ENV
-        echo "EOF" >> $GITHUB_ENV      
-        echo "minor-count<<EOF" >> $GITHUB_ENV
-        echo "$(if [[ -z ${{ env.minor }} ]]; then echo -1; else echo ${{ env.minor }}; fi)" >> $GITHUB_ENV
         echo "EOF" >> $GITHUB_ENV
       shell: bash
     - name: Output SemVer release values
       id: format-results
       run: |
-        echo "::set-output name=semver::1.${{ env.calver-count }}.$(if [[ ${{ env.calver-count }} -eq ${{ env.minor-count }} ]]; then echo $(expr ${{ env.patch }} + 1); else echo 0; fi)"
-        echo "::set-output name=notes::$(if [[ ${{ env.calver-count }} -eq ${{ env.minor-count }} ]]; then echo Made minor changes for ${{ inputs.calver }}; else echo Made major changes for ${{ inputs.calver }}; fi)"
+        echo "::set-output name=semver::1.${{ env.ccount }}.$(if [[ ${{ env.ccount }} -eq ${{ env.minor }} ]]; then echo $(expr ${{ env.patch }} + 1); else echo 0; fi)"
+        echo "::set-output name=notes::$(if [[ ${{ env.ccount }} -eq ${{ env.minor }} ]]; then echo Made minor changes for ${{ inputs.calver }}; else echo Made major changes for ${{ inputs.calver }}; fi)"
       shell: bash
