--- a/action.yml
+++ b/action.yml
@@ -40,6 +40,6 @@ runs:
     - name: Output SemVer release values
       id: format-results
       run: |
-        echo "::set-output name=semver::1.${{ env.ccount }}.$(if [[ ${{ env.ccount }} -eq ${{ env.minor }} ]]; then echo $(expr ${{ env.patch }} + 1); else echo 0; fi)"
+        echo "::set-output name=semver::$(echo 1.${{ env.ccount }}.$(if [[ ${{ env.ccount }} -eq ${{ env.minor }} ]]; then echo $(expr ${{ env.patch }} + 1); else echo 0; fi))"
         echo "::set-output name=notes::$(if [[ ${{ env.ccount }} -eq ${{ env.minor }} ]]; then echo Made minor changes for ${{ inputs.calver }}; else echo Made major changes for ${{ inputs.calver }}; fi)"
       shell: bash
